--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "mdi-react": "7.4.0",
     "micro-memoize": "^4.0.9",
     "modern-normalize": "^1.0.0",
-    "next": "^10.0.5",
+    "next": "12",
     "next-fonts": "^1.4.0",
     "next-mdx-remote": "^1.0.0",
     "nprogress": "^0.2.0",
