updated lint and lint fix

--- a/package.json
+++ b/package.json
@@ -124,8 +124,8 @@
     "lint": "yarn lint:eslint && yarn lint:prettier",
     "lint:eslint": "eslint \"src/**/*.{ts,tsx}\" -f unix",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" -f unix --fix",
-    "lint:prettier": "prettier --check \"src/**/*.{ts,tsx,md,mdx}\" *.js",
-    "lint:prettier:fix": "prettier --write \"src/**/*.{ts,tsx,md,mdx}\" *.js",
+    "lint:prettier": "prettier --check \"src/**/*.{ts,tsx,mdx}\" \"src/pages/en/**/*.md\" *.js",
+    "lint:prettier:fix": "prettier --write \"src/**/*.{ts,tsx,mdx}\" \"src/pages/en/**/*.md\" *.js",
     "typecheck": "tsc --noEmit",
     "typecheck:watch": "npm run typecheck -- --watch",
     "check:urls": "find . -type f -name '*.md' ! -path './node_modules/*' ! -path './_site/*' | xargs -L1 npx markdown-link-check -q -c mlc_config.json",
