--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,5 @@
 files:
   - source: /src/pages/en/**/*.md
     translation: /src/pages/%two_letters_code%/**/%original_file_name%
+  - source: /src/common/constants_that_require_translations.ts
+    translation: /src/common/constants_that_require_translations_%two_letters_code%.%file_extension%
