--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@docusaurus/plugin-client-redirects": "^2.0.1",
     "@docusaurus/preset-classic": "^2.0.1",
     "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.1.1",
     "prism-react-renderer": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
