--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -1,6 +1,8 @@
 root: ./
 
 redirects:
+  build-apps/references/bns: clarity/example-contracts/bns.md
+  docs/blockchain/stacks-blockchain-api: stacks-101/api.md
   docs/clarity: clarity/overview.md
   docs/clarity/crash-course: clarity/clarity-crash-course.md
   docs/clarity/language-functions: clarity/functions.md
@@ -8,8 +10,8 @@ redirects:
   docs/clarity/language-types: clarity/types.md
   docs/clarity/noteworthy-contracts/bns-contract: clarity/example-contracts/bns.md
   docs/clarity/noteworthy-contracts/stacking-contract: clarity/example-contracts/stacking.md
-  docs/clarity/noteworthy-contracts/xbtc: clarity/example-contracts.md
-  docs/clarity/sample-contracts: clarity/example-contracts.md
+  docs/clarity/noteworthy-contracts/xbtc: clarity/example-contracts/xbtc.md
+  docs/clarity/sample-contracts: clarity/example-contracts/audited-starter-contracts.md
   docs/clarity/security: clarity/decidability.md
   docs/clarity/security/decidable: clarity/decidability.md
   docs/contribute: stacks-101/what-is-stacks.md
@@ -25,7 +27,7 @@ redirects:
   docs/cookbook/stacks-js-auth: tutorials/hello-stacks-quickstart-tutorial.md
   docs/cookbook/stacks-js-sending-transactions: tutorials/hello-stacks-quickstart-tutorial.md
   docs/cookbook/verifying-a-btc-tx-was-mined: tutorials/hello-stacks-quickstart-tutorial.md
-  docs/gaia: stacks-in-depth/gaia.md
+  docs/gaia: stacks-in-depth/gaia/README.md
   docs/gaia/configuration: stacks-in-depth/gaia/configuration.md
   docs/gaia/deploy-gaia-hub: stacks-in-depth/gaia/deploy-gaia-hub.md
   docs/gaia/gaia-on-ec2: stacks-in-depth/gaia/gaia-on-ec2.md
@@ -40,7 +42,7 @@ redirects:
   docs/nakamoto/signer: nakamoto-upgrade/running-a-signer.md
   docs/nakamoto/stacking: nakamoto-upgrade/stacking-flow.md
   docs/next-steps: stacks-101/what-is-stacks.md
-  docs/nodes-and-miners: stacks-in-depth/nodes-and-miners.md
+  docs/nodes-and-miners: stacks-in-depth/nodes-and-miners/README.md
   docs/nodes-and-miners/digitalocean: stacks-in-depth/nodes-and-miners/run-a-node-with-digital-ocean.md
   docs/nodes-and-miners/hosted-nodes: stacks-in-depth/nodes-and-miners/run-a-node-with-a-hosted-provider.md
   docs/nodes-and-miners/miner-costs-and-fees: stacks-in-depth/nodes-and-miners/miner-costs-and-fees.md
@@ -67,7 +69,7 @@ redirects:
   docs/stacks-academy/proof-of-transfer: stacks-101/proof-of-transfer.md
   docs/stacks-academy/sips: stacks-101/sips.md
   docs/stacks-academy/stacking: stacks-101/stacking.md
-  docs/stacks-academy/stacks-blockchain-api: stacks-101/stacks-blockchain-api.md
+  docs/stacks-academy/stacks-blockchain-api: stacks-101/api.md
   docs/stacks-academy/technical-specs: stacks-101/technical-specifications.md
   docs/stacks-academy/testnet: stacks-101/testnet.md
   docs/stacks-academy/transactions: stacks-101/transactions.md
@@ -76,4 +78,16 @@ redirects:
   docs/tutorials: tutorials/hello-stacks-quickstart-tutorial.md
   docs/tutorials/community-tutorials: tutorials/community-tutorials.md
   docs/tutorials/hello-stacks: tutorials/hello-stacks-quickstart-tutorial.md
+  references/bns-contract: clarity/example-contracts/bns.md
+  references/language-functions: clarity/functions.md
+  understand-stacks/microblocks: stacks-101/microblocks.md
+  understand-stacks/mining: stacks-101/mining.md
+  understand-stacks/proof-of-transfer: stacks-101/proof-of-transfer.md
+  understand-stacks/stacking: stacks-101/stacking.md
+  understand-stacks/testnet: stacks-101/testnet.md
+  understand-stacks/transactions: stacks-101/transactions.md
   write-smart-contracts/overview: clarity/overview.md
+  write-smart-contracts/language-functions: clarity/functions.md
+  write-smart-contracts/overview: clarity/overview.md
+  write-smart-contracts/principals: clarity/types.md
+  write-smart-contracts/tokens: clarity/overview.md
