--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -2,6 +2,7 @@ root: ./
 
 redirects:
   build-apps/references/bns: clarity/example-contracts/bns.md
+  build-apps/references/gaia: stacks-in-depth/gaia.md/README.md
   docs/blockchain/stacks-blockchain-api: stacks-101/api.md
   docs/clarity: clarity/overview.md
   docs/clarity/crash-course: clarity/clarity-crash-course.md
@@ -78,10 +79,13 @@ redirects:
   docs/tutorials: tutorials/hello-stacks-quickstart-tutorial.md
   docs/tutorials/community-tutorials: tutorials/community-tutorials.md
   docs/tutorials/hello-stacks: tutorials/hello-stacks-quickstart-tutorial.md
+  docs/understand-stacks/testnet: stacks-101/testnet.md
+  docs/write-smart-contracts: clarity/overview.md
   references/bns-contract: clarity/example-contracts/bns.md
   references/language-functions: clarity/functions.md
   understand-stacks/microblocks: stacks-101/microblocks.md
   understand-stacks/mining: stacks-101/mining.md
+  understand-stacks/network: stacks-101/network.md
   understand-stacks/proof-of-transfer: stacks-101/proof-of-transfer.md
   understand-stacks/stacking: stacks-101/stacking.md
   understand-stacks/testnet: stacks-101/testnet.md
