Fix: Add tool permissions for Claude to fetch diffs and create issues

--- a/.github/workflows/smart-docs-monitor.yml
+++ b/.github/workflows/smart-docs-monitor.yml
@@ -168,6 +168,7 @@ jobs:
           claude_args: |
             --max-turns 40
             --model claude-sonnet-4-20250514
+            --allowed-tools "Bash(curl:*),Bash(gh:*),Grep,Read,Write,glob"
 
       - name: Create issues from Claude analysis
         if: steps.batch.outputs.pr_count > 0
