--- a/.github/workflows/smart-docs-monitor.yml
+++ b/.github/workflows/smart-docs-monitor.yml
@@ -2,13 +2,13 @@ name: Smart Docs Monitor
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # Run every 6 hours
+    - cron: '0 0 * * *'  # Run every 24 hours at midnight UTC
   workflow_dispatch:
     inputs:
       hours_back:
         description: 'Hours to look back for merged PRs'
         required: false
-        default: '6'
+        default: '24'
 
 permissions:
   contents: read
@@ -36,7 +36,7 @@ jobs:
               .split('\n')
               .filter(line => line.trim() && !line.startsWith('#'));
 
-            const hoursBack = parseInt('${{ github.event.inputs.hours_back || '6' }}');
+            const hoursBack = parseInt('${{ github.event.inputs.hours_back || '24' }}');
             const since = new Date(Date.now() - hoursBack * 60 * 60 * 1000).toISOString();
 
             let batchSummary = '# Merged PRs to Review\n\n';
